--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ src: url(data:font/ttf;base64,AAEAAAASAQAABAAgR0RFRqOgoD8AAZ4IAAABpkdQT1M8vPAnAA
   <![endif]-->
 </head>
 <body>
-<div style="display: inline-block; max-width: 875px; margin-left: 20px;">
+<div style="display: inline-block; max-width: 875px; margin-left: 10px; margin-right: 10px;">
 <h1 id="zero-waste-책을-읽고-나서-느낀-소감">Zero waste 책을 읽고 나서
 느낀 소감</h1>
 <p>안녕하세요, 코윈 환지팀 ( 환경을 지키는 팀)에 소속된 이 금하
